--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,9 @@ Navbar
   height: 5rem;
   padding: 1rem;
   display: grid;
+  -webkit-box-align: center;
   align-items: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .nav-center {
@@ -203,6 +205,7 @@ Navbar
 .nav-header {
   display: grid;
   grid-template-columns: 1fr auto;
+  -webkit-box-align: center;
   align-items: center;
 }
 .nav-btn {
@@ -232,6 +235,7 @@ Navbar
     color: var(--clr-grey-1);
     font-weight: bold;
     letter-spacing: var(--spacing);
+    -webkit-transition: var(--transition);
     transition: var(--transition);
   }
   .nav-links a:hover {
@@ -240,6 +244,7 @@ Navbar
   .nav-center {
     display: grid;
     grid-template-columns: auto 1fr;
+    -webkit-box-align: center;
     align-items: center;
   }
 }
@@ -270,11 +275,14 @@ Sidebar
   /* align-items: center;
   justify-content: center; */
   place-items: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   /* add later */
+  -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
 }
 .show-sidebar {
+  -webkit-transform: translateX(0);
   transform: translateX(0);
 }
 .sidebar-links {
@@ -283,6 +291,7 @@ Sidebar
 .sidebar-links a {
   font-size: 2rem;
   text-transform: capitalize;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   color: var(--clr-grey-5);
   letter-spacing: var(--spacing);
@@ -302,6 +311,7 @@ Sidebar
 .social-icon {
   font-size: 1.5rem;
   color: var(--clr-grey-1);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .social-icon:hover {
@@ -314,12 +324,14 @@ Sidebar
   font-size: 3rem;
   background: transparent;
   border: transparent;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   color: #bb2525;
   cursor: pointer;
 }
 .close-btn:hover {
   color: #e66b6b;
+  -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
@@ -377,6 +389,7 @@ Hero
 .hero-photo {
   max-width: 25rem;
   max-height: 30rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: var(--radius);
   position: relative;
@@ -428,6 +441,7 @@ Services
   margin-bottom: 2rem;
   border-radius: var(--radius);
   text-align: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 
@@ -438,9 +452,11 @@ Services
 .service .underline {
   width: 3rem;
   height: 0.12rem;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .service p {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .service:hover {
@@ -457,6 +473,8 @@ Services
   .services-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -487,7 +505,9 @@ Projects
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   opacity: 0;
 }
@@ -496,9 +516,11 @@ Projects
   color: var(--clr-white);
 }
 .project-img {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   border-radius: var(--radius);
   height: 15rem;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .project:hover .project-img {
@@ -516,11 +538,13 @@ Projects
   height: 100%;
   border: 0.25rem solid var(--clr-white);
   border-radius: var(--radius);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   opacity: 0;
 }
 .project:hover::after {
   opacity: 1;
+  -webkit-transform: scale(0.8);
   transform: scale(0.8);
   box-shadow: var(--dark-shadow);
 }
@@ -528,6 +552,8 @@ Projects
   .projects-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -582,6 +608,7 @@ Connect
   left: 0;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   z-index: -2;
 }
@@ -600,6 +627,15 @@ Connect
   background: var(--clr-primary-10);
   padding: 3rem 5rem 12rem 5rem;
   text-align: center;
+  -webkit-clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 75%,
+    75% 75%,
+    75% 100%,
+    50% 75%,
+    0% 75%
+  );
   clip-path: polygon(
     0% 0%,
     100% 0%,
@@ -611,6 +647,7 @@ Connect
   );
 }
 .connect {
+  -webkit-clip-path: polygon(50% 0, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
   clip-path: polygon(50% 0, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
 }
 .video-banner .secion-title {
@@ -628,6 +665,8 @@ Skills
   .skills-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -672,6 +711,7 @@ Skills
   position: absolute;
   top: -2rem;
   left: 50%;
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 .skill-text-70 {
@@ -690,22 +730,59 @@ Timeline
   max-width: 40rem;
 }
 .timeline-item {
-  border-top: 2px solid var(--clr-primary-5);
+  border-top: 2px dashed var(--clr-primary-5);
   margin: 0;
   padding: 4rem 2rem;
   position: relative;
-  border-radius: var(--radius);
 }
 .timeline p {
   margin-bottom: 0;
 }
 .timeline-item:nth-child(even) {
-  border-left: 2px solid var(--clr-primary-5);
+  border-left: 2px dashed var(--clr-primary-5);
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
   padding-right: 0;
   margin-right: 2rem;
 }
 .timeline-item:nth-child(odd) {
-  border-right: 2px solid var(--clr-primary-5);
+  border-right: 2px dashed var(--clr-primary-5);
+  margin-left: 2rem;
+  padding-left: 0;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+}
+.timeline-item:first-child {
+  border-top: none;
+  border-top-right-radius: 0;
+}
+
+.timeline-item:last-child {
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.number {
+  position: absolute;
+  top: 50%;
+  background: var(--clr-primary-5);
+  width: 2rem;
+  height: 2rem;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  color: var(--clr-primary-1);
+  font-weight: bold;
+}
+.timeline-item:nth-child(odd) .number {
+  right: 0;
+  -webkit-transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
+}
+.timeline-item:nth-child(even) .number {
+  left: 0;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 /*
@@ -713,20 +790,188 @@ Timeline
 Blog
 ===============
 */
-
+.blog {
+  background: var(--clr-grey-10);
+}
+.card {
+  height: 27rem;
+  position: relative;
+  -webkit-perspective: 1500px;
+  perspective: 1500px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+.card-side {
+  -webkit-transition: all 2s ease-in-out;
+  transition: all 2s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--radius);
+}
+.card-front {
+  background: var(--clr-white);
+}
+.card-back {
+  background: var(--clr-primary-10);
+  -webkit-transform: rotatey(180deg);
+  transform: rotatey(180deg);
+  display: grid;
+  place-items: center;
+}
+.card:hover .card-front {
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.card:hover .card-back {
+  -webkit-transform: rotateY(0);
+  transform: rotateY(0);
+}
+.card-front img {
+  height: 13rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+}
+.card-info {
+  padding: 1rem 1.5rem;
+}
+.card-footer {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.card-footer p {
+  text-transform: uppercase;
+  justify-self: end;
+  color: var(--clr-primary-5);
+  font-size: 0.85rem;
+  margin-bottom: 0;
+}
+.card-footer img {
+  width: 2rem;
+  height: 2rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.blog-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  gap: 3rem 1rem;
+}
 /*
 =============== 
 Footer
 ===============
 */
+.footer {
+  padding-bottom: 2rem;
+  background: #222;
+  display: grid;
+  place-items: center;
+}
+.footer .social-icons {
+  margin-bottom: 2rem;
+}
+.footer .social-icon {
+  color: var(--clr-primary-5);
+}
+.footer .social-icon:hover {
+  color: var(--clr-primary-10);
+}
+.footer p {
+  font-size: 1.25rem;
+  text-transform: capitalize;
+}
 /*
 =============== 
 Single Page
 ===============
 */
-
+.single-page {
+  background-color: var(--clr-primary-10);
+  min-height: calc(100vh - 5rem - 198px);
+}
+.page-info {
+  max-width: 700px;
+}
+.page-info a {
+  text-transform: uppercase;
+  color: var(--clr-primary-5);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+.page-info a:hover {
+  color: var(--clr-primary-1);
+}
 /*
 =============== 
 Products Page
 ===============
 */
+.projects-hero {
+  height: 40vh;
+  background: var(--clr-primary-10);
+  display: grid;
+  place-items: center;
+}
+.projects-hero .section-title {
+  margin-bottom: 0;
+}
+.single-project {
+  background: var(--clr-grey-10);
+  border-radius: var(--radius);
+}
+.project-img-container img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+}
+.project-img-container {
+  position: relative;
+}
+.project-icon {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
+  font-size: 1.75rem;
+  height: 4rem;
+  width: 4rem;
+  background: var(--clr-primary-5);
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  border: 0.375rem solid var(--clr-grey-10);
+  color: var(--clr-primary-1);
+}
+.project-details {
+  padding: 2rem 1.5rem;
+}
+.project-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: var(--clr-primary-5);
+}
+.project-footer a {
+  color: var(--clr-primary-5);
+  text-transform: capitalize;
+  justify-self: end;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+.project-footer a:hover {
+  color: var(--clr-primary-1);
+}
+.projects-page-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  gap: 3rem 1rem;
+}
